--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,17 @@
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 	{% for css_path in page.extra_css %}
 		<link rel="stylesheet" href="{{ css_path | prepend: site.baseurl }}">
+	{% endfor %}
+
+	{% for js_path in page.extra_js %}
+		<script type="text/javascript" src="{{ js_path | prepend: site.baseurl }}"></script>
 	{% endfor %}
 
 </head>
