--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,13 @@
 		<div><a class="logo" href="/"></a></div>
 		<div class="title">club shen</div>
 
+		<div class="navbar">
+			<ul>
+				<li class="navbar-item"><a href="https://trello.com/clubshen"><i class="fa fa-trello"></i></a></li>
+				<li class="navbar-item"><a href="slack/"><i class="fa fa-slack"></i></a></li>
+			</ul>
+		</div>
+
 	</div>
 
 </div>
