--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,7 @@ html, body {
 			display: inline-block;
 
 		}
+
 		.logo {
 			overflow: visible;
 			display: inline-block;
@@ -41,6 +42,7 @@ html, body {
 			height: 100px;
 			width: 100px;
 			background-image: url("{{ "/logo.png" | prepend: site.baseurl }}");
+			z-index: 1;
 		}
 
 		.title {
@@ -54,7 +56,61 @@ html, body {
 			font-weight: bold;
 			display: inline-block;
 		}
+
+		.navbar {
+
+			display: table-cell;
+			float: right;
+			height: 100%;
+			box-sizing: border-box;
+			vertical-align: middle;
+
+			ul {
+				height: 100%;
+				display: inline-block;
+				list-style-type: none;
+				padding: 0px; margin: 0px;
+			}
+
+			.navbar-item {
+				display: inline-block;
+				padding-top: 6px;
+				margin-left: 10px;
+				vertical-align: top;
+
+				a {
+					font-size: 24px;
+					color: white;
+				}
+			}
+		}
 	}
+}
+
+.jumbotron {
+
+	height: 500px;
+
+	p {
+		margin: 0px;
+	}
+
+	.background {
+		position: absolute;
+		background: rgb(71, 186, 103);
+		width: 100%;
+		height: 500px;
+	}
+
+	.caption {
+		width: 800px;
+		margin: 0px auto;
+		padding-top: 200px;
+		color: white;
+		text-align: left;
+		font-size: 48px;
+	}
+
 }
 .page-content {
 
@@ -65,6 +121,12 @@ html, body {
 
 		width: $width;
 		margin: 0 auto;
+
+	}
+
+	.stream-window {
+
+		text-align: center;
 
 	}
 
