--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 
 		<div class="navbar">
 			<ul>
-				<li class="navbar-item"><a href="https://trello.com/clubshen"><i class="fa fa-trello"></i></a></li>
+				<li class="navbar-item"><a href="trello/"><i class="fa fa-trello"></i></a></li>
 				<li class="navbar-item"><a href="slack/"><i class="fa fa-slack"></i></a></li>
 			</ul>
 		</div>
