--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 
 $width: 800px;
 $color_text: #242628;
+$color_accent: rgb(72, 195, 114);
 
 html, body {
 	background: white;
@@ -97,7 +98,8 @@ html, body {
 
 	.background {
 		position: absolute;
-		background: rgb(71, 186, 103);
+		background-image: url("{{ "/jumbotron.jpg" | prepend: site.baseurl }}");
+		background-color: $color_accent;
 		width: 100%;
 		height: 500px;
 	}
@@ -109,6 +111,7 @@ html, body {
 		color: white;
 		text-align: left;
 		font-size: 48px;
+		font-weight: bold;
 	}
 
 }
