--- a/ssb4/ladder/style.scss
+++ b/ssb4/ladder/style.scss
@@ -53,7 +53,7 @@ $tier-e: #b71ede;
 		border-radius: 5px;
 		margin-bottom: 5px;
 
-		height: 30px;
+		height: 64px;
 		line-height: 30px;
 
 		background-color: lighten($bracket-color, 50%);
@@ -138,9 +138,17 @@ $tier-e: #b71ede;
 		}
 
 		.games {
-			width: auto;
+			width: 300px;
 			display: inline-block;
 			color: rgba(255, 255, 255, 0.4);
+		}
+
+		.main {
+			position: absolute;
+			width: auto;
+			display: inline-block;
+			color: white;
+			float: right;
 		}
 
 	}
