--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,23 @@
+
 <head>
 
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="description" content="{{ site.description }}">
-    <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+	<meta name="description" content="{{ site.description }}">
+	<link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <meta name="google-signin-client_id" content="186423905335-ioo2m2hfvh56joa91dmiv0na0dkak980.apps.googleusercontent.com">
+	<script type="text/javascript" src="https://rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
+	<script type="text/javascript">
+	window.onload = function() {
+		var s = skrollr.init();
+	}
+	</script>
+
+
+	<meta name="google-signin-client_id" content="186423905335-ioo2m2hfvh56joa91dmiv0na0dkak980.apps.googleusercontent.com">
 
 	{% for css_path in page.extra_css %}
 		<link rel="stylesheet" href="{{ css_path | prepend: site.baseurl }}">
