changed jumbotron image

--- a/style.scss
+++ b/style.scss
@@ -128,7 +128,7 @@ html, body {
 
 	.background {
 		position: absolute;
-		background-image: url("/jumbotron.png");
+		background-image: url("/jumbotron.jpg");
 		background-color: $color_accent;
 		background-size: cover;
 		width: 100%;
