--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,12 @@
-<footer class="site-footer">
-
-</footer>
+<section id="contact">
+	<footer
+		data-bottom="background-position-y: -100px;"
+		data-100-bottom="background-position-y: 0px;"
+	>
+		<div class="row">
+			<div class="author">
+				<span>designed by octopod</span>
+			</div>
+		</div>
+	</footer>
+</section>
