--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,17 +6,17 @@
 		<!-- <div class="title">club shen</div> -->
 		<div class="navbar navbar--left">
 			<ul>
-				<li class="navbar-item"><a href="ladder/ssb4/">home</a></li>
-				<li class="navbar-item"><a href="ladder/ssb4/">ladder</a></li>
-				<li class="navbar-item"><a href="ladder/ssb4/">about</a></li>
+				<li class="navbar-item"><a href="/">home</a></li>
+				<li class="navbar-item"><a href="/ladder/ssb4/">ladder</a></li>
+				<li class="navbar-item"><a href="/ladder/ssb4/">about</a></li>
 			</ul>
 		</div>
 
 		<div class="navbar navbar--right">
 			<ul>
-				<li class="navbar-item"><a href="facebook/"><i class="fa fa-facebook"></i></a></li>
-				<li class="navbar-item"><a href="trello/"><i class="fa fa-trello"></i></a></li>
-				<li class="navbar-item"><a href="slack/"><i class="fa fa-slack"></i></a></li>
+				<li class="navbar-item"><a href="/facebook/"><i class="fa fa-facebook"></i></a></li>
+				<li class="navbar-item"><a href="/trello/"><i class="fa fa-trello"></i></a></li>
+				<li class="navbar-item"><a href="/slack/"><i class="fa fa-slack"></i></a></li>
 			</ul>
 		</div>
 
