--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,21 @@
 	<!-- skrollr -->
 	<script type="text/javascript" src="https://rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
 	<script type="text/javascript">
-	window.onload = function() {
-		var s = skrollr.init();
-	}
+		window.addEventListener('load', function() {
+			var s = skrollr.init();
+		});
+	</script>
+
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+	    apiKey: "AIzaSyCvx7SAtRhHYNqLIntBQoTh0vtSa4XzVjI",
+	    authDomain: "club-shen.firebaseapp.com",
+	    databaseURL: "https://club-shen.firebaseio.com",
+	    storageBucket: "firebase-club-shen.appspot.com",
+	  };
+	  firebase.initializeApp(config);
 	</script>
 
 	<!-- tabletop -->
