--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 		});
 	</script>
 
-	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+	<!-- <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 	<script>
 	  // Initialize Firebase
 	  var config = {
@@ -31,7 +31,7 @@
 	    storageBucket: "firebase-club-shen.appspot.com",
 	  };
 	  firebase.initializeApp(config);
-	</script>
+	</script> -->
 
 	<!-- tabletop -->
 	<script type="text/javascript" src="https://rawgit.com/jsoma/tabletop/master/src/tabletop.js"></script>
