--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 				<li class="navbar-item"><a href="/facebook/"><i class="fa fa-facebook"></i></a></li>
 				<li class="navbar-item"><a href="/trello/"><i class="fa fa-trello"></i></a></li>
 				<li class="navbar-item"><a href="/slack/"><i class="fa fa-slack"></i></a></li>
-				<li class="navbar-item"><a id="sign-in-button" href="">Sign in with Google</a></li>
+				<!-- <li class="navbar-item"><a id="sign-in-button" href="">Sign in with Google</a></li> -->
 			</ul>
 		</div>
 
