Update Ladder page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="https://rawgit.com/Prinzhorn/skrollr/master/dist/skrollr.min.js"></script>
 	<script type="text/javascript">
 		window.addEventListener('load', function() {
-			var s = skrollr.init();
+			var s = skrollr.init({ forceHeight: false });
 		});
 	</script>
 
