--- a/ladder/ssb4/style.scss
+++ b/ladder/ssb4/style.scss
@@ -23,10 +23,11 @@ $tier-e: #b71ede;
 		}
 	}
 	.column--right {
-		width: 550px;
-		padding-left: 50px;
+		width: 100%;
+		//width: 550px;
+		//padding-left: 50px;
 		display: inline-block;
-		float: right;
+		//float: right;
 	}
 
 }
